[gd_scene load_steps=5 format=3 uid="uid://drru1xs01q3v6"]

[ext_resource type="Script" path="res://GUI/ui/ui.gd" id="1_5bdqp"]
[ext_resource type="PackedScene" uid="uid://0q02y30luv84" path="res://GUI/explaner/explaner.tscn" id="2_s3w7m"]
[ext_resource type="PackedScene" uid="uid://cc0mtyajbcmst" path="res://player/player_avatar/player_avatar.tscn" id="3_4q3ji"]
[ext_resource type="PackedScene" uid="uid://chgdstjyij0dt" path="res://GUI/dialogue_box/dialogue_box.tscn" id="4_difgc"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bdqp")
dialogue_avatars = [ExtResource("3_4q3ji"), null]

[node name="Explaner" parent="." instance=ExtResource("2_s3w7m")]
position = Vector2(249, 872)

[node name="AvatarPosition" type="Marker2D" parent="."]
position = Vector2(597, 563)
gizmo_extents = 50.0

[node name="PlayerAvatar" parent="AvatarPosition" instance=ExtResource("3_4q3ji")]

[node name="DialogueBox" parent="." instance=ExtResource("4_difgc")]
layout_mode = 1
offset_left = 492.0
offset_top = 684.0
offset_right = 1860.0
offset_bottom = 1026.0
